--- a/streams/mbt1b/video.html
+++ b/streams/mbt1b/video.html
@@ -157,6 +157,7 @@
     odometers[0].options = opts;
     odometers[1].options = opts;
     odometers[2].options = opts;
+    odometers[3].options = opts;
 
     // Function to fetch the first video ID
     function fetchFirstVideoId() {
