--- a/streams/mbt1b/fast.html
+++ b/streams/mbt1b/fast.html
@@ -34,7 +34,7 @@
             font-size: 25px;
         }
 
-        #apiView {
+        #gain {
             font-family: "Roboto";
             font-weight: 400;
             color: #999999;
@@ -127,7 +127,8 @@
     <div class="v">
         <span class="viewtitle">Subscribers <iconify-icon icon="bi:eye-fill"></iconify-icon>
             <span id="gain">0</span>
-        </span><br>
+        </span>
+    </div>
         <span id="count" class="odometer">0</span>
     </div>
     <script>
