--- a/streams/mbt1b/video.html
+++ b/streams/mbt1b/video.html
@@ -86,13 +86,6 @@
             font-size: 30px;
         }
 
-        #sinceupload {
-            font-family: "Roboto";
-            font-weight: 500;
-            font-size: 69px;
-            color: white;
-        }
-
         .note {
             color: #006DFF;
             font-family: "Ubuntu";
@@ -138,9 +131,7 @@
     <h1 class="c">Comments <iconify-icon icon="fa-solid:comment-dots"></iconify-icon>
     </h1>
     <span id="comments" class="odometer">0</span><div class="up">
-        <span class="tsu">Time Since Upload:</span>
-        <br>
-        <span id="sinceupload">DD:HH:MM:SS</span>
+        <span class="tsu">Time Since Upload: <span id="sinceupload">DD:HH:MM:SS</span></span>
     </div>
     <script>
     var id;
