--- a/streams/mbt1b/short.html
+++ b/streams/mbt1b/short.html
@@ -138,9 +138,7 @@
     <h1 class="c">Comments <iconify-icon icon="fa-solid:comment-dots"></iconify-icon>
     </h1>
     <span id="comments" class="odometer">0</span><div class="up">
-        <span class="tsu">Time Since Upload:</span>
-        <br>
-        <span id="sinceupload">DD:HH:MM:SS</span>
+        <span class="tsu">Time Since Upload: <span id="sinceupload">DD:HH:MM:SS</span></span>
     </div>
     <script>
     var id;
