--- a/main/assets/HuntingPuma378/index.html
+++ b/main/assets/HuntingPuma378/index.html
@@ -126,7 +126,7 @@
                 upColor: up
             }
             if (studio == true) {
-                fetch(`https://corsproxy.io/?https://studio.nia-statistics.com/api/channel/${id}`)
+                fetch(`https://cors.stats100.xyz/https://studio.nia-statistics.com/api/channel/${id}`)
                     .then((res) => res.json())
                     .then((data) => {
                         count = goal - data.channels.counts[counter].count;
