--- a/main/assets/HuntingPuma378/index.html
+++ b/main/assets/HuntingPuma378/index.html
@@ -7,7 +7,7 @@
 <style>
      @font-face {
          font-family: 'MinecraftSeven';
-         src: url('/fonts/minecraft-seven.otf') format('opentype');
+         src: url('./fonts/minecraft-seven.otf') format('opentype');
      }
 
      body {
