--- a/main/assets/HuntingPuma378/index.html
+++ b/main/assets/HuntingPuma378/index.html
@@ -136,7 +136,7 @@
                             document.getElementById("count").innerHTML = count;
                     });
             }
-            if (est === 0) {
+            else if (est === 0) {
                 fetch(`https://mixerno.space/api/youtube-channel-counter/user/${id}`)
                     .then((res) => res.json())
                     .then((data) => {
@@ -147,7 +147,7 @@
                             document.getElementById("count").innerHTML = count;
                     });
             }
-            if (est === 1) {
+            else if (est === 1) {
                 fetch(`https://mixerno.space/api/youtube-channel-counter/user/${id}`)
                     .then((res) => res.json())
                     .then((data) => {
