--- a/streams/goldmines100m/studio.html
+++ b/streams/goldmines100m/studio.html
@@ -66,7 +66,7 @@ let size = validateSize(userInput);
 
 // Set interval to fetch data
 setInterval(() => {
-    fetch(`https://corsproxy.io/?https://studio.nia-statistics.com/api/channel/${id}`)
+    fetch(`https://cors.stats100.xyz/https://studio.nia-statistics.com/api/channel/${id}`)
         .then((res) => res.json())
         .then((data) => {
             document.getElementById("count").innerHTML = data.channels.counts[counter].count;
