--- a/pwd/combined.html
+++ b/pwd/combined.html
@@ -46,10 +46,10 @@
 
       async function datas() {
         for (let i = 0; i < Channels.length; i++) {
-  await fetch(`https://nia-statistics.com/api/get?platform=youtube&type=channel&id=${Channels[i]}`)
+  await fetch(`https://axern.space/api/get?platform=youtube&type=channel&id=${Channels[i]}`)
             .then((res) => res.json())
             .then((data) => {
-              work[i] = data.estSubCount;
+              work[i] = data.apiSubCount;
 
             });
         }
