--- a/pwd/combined.html
+++ b/pwd/combined.html
@@ -26,8 +26,7 @@
   fetch(`./combined.json`)
             .then((res) => res.json())
             .then((data) => {
-              var Channels = data.Channels;
-
+              Channels = data.Channels;
             });
   
       var number = 0;
